--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod --aot=true --buildOptimizer=true",
-    "dev": "ng serve --host 0.0.0.0 --port 1111 --live-reload false",
+    "dev": "ng serve --host 0.0.0.0 --live-reload false",
     "test": "ng test --code-coverage",
     "watch": "ng build --watch --configuration development"
   },
