- feat: - Movies, actors and companies services created.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,12 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@environments/*": ["src/environments/*"],
+      "@services/*": ["src/app/services/*"],
+      "@movies/*": ["src/app/movies/*"],
+      "@shared/*": ["src/shared/*"]
+    },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
